--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b50150b7",
    "metadata": {},
    "outputs": [],
@@ -10,11 +10,14 @@
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
     "\n",
-    "from tensorflow.keras.preprocessing import image\n",
+    "from PIL import Image\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "from tensorflow.keras.applications.vgg16 import VGG16, preprocess_input\n",
-    "from tensorflow.keras.models import Model\n"
+    "from tensorflow.keras.preprocessing.image import img_to_array\n",
+    "\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n"
    ]
   },
   {
@@ -327,10 +330,17 @@
     "    # Compute cosine similarities\n",
     "    similarities = [1 - cosine(input_features, other_feature) for other_feature in all_features]\n",
     "    \n",
-    "    # Get top N indices (excluding the input image itself)\n",
+    "    # Get top N indices (descending similarity)\n",
+    "    similar_indices = np.argsort(similarities)[::-1]\n",
+    "    \n",
+    "    # Try to remove input image from recommendations\n",
     "    input_image_name = os.path.basename(input_image_path)\n",
-    "    similar_indices = np.argsort(similarities)[::-1]  # descending order\n",
-    "    similar_indices = [idx for idx in similar_indices if idx != all_image_names.index(input_image_name)]\n",
+    "    try:\n",
+    "        input_idx = all_image_names.index(input_image_name)\n",
+    "        similar_indices = [idx for idx in similar_indices if idx != input_idx]\n",
+    "    except ValueError:\n",
+    "        pass  # input image not in dataset, no need to remove\n",
+    "    \n",
     "    similar_indices = similar_indices[:top_n]\n",
     "\n",
     "    # Display images\n",
@@ -351,20 +361,20 @@
     "        plt.axis('off')\n",
     "    \n",
     "    plt.tight_layout()\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e3c1f89",
+   "execution_count": 17,
+   "id": "4326db3a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 112ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 102ms/step\n"
      ]
     },
     {
@@ -374,7 +384,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m input_image_path = \u001b[33m'\u001b[39m\u001b[33mcontent/women fashion/dark, elegant, sleeveless dress that reaches down to about mid-calf.jpg\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mrecommend_fashion_items_cnn\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_image_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mall_features\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata_files_paths\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtop_n\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m input_image_path = \u001b[33m'\u001b[39m\u001b[33mcontent/women fashion/dark, elegant, sleeveless dress that reaches down to about mid-calf.jpg\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mrecommend_fashion_items_cnn\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_image_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mall_features\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata_files_paths\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtop_n\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 13\u001b[39m, in \u001b[36mrecommend_fashion_items_cnn\u001b[39m\u001b[34m(input_image_path, all_features, all_image_names, model, top_n)\u001b[39m\n\u001b[32m     10\u001b[39m similar_indices = np.argsort(similarities)[-top_n:]\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# filter out the input image index from similar_indices\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m similar_indices = [idx \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m similar_indices \u001b[38;5;28;01mif\u001b[39;00m idx != \u001b[43mall_image_names\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_image_path\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# display the input image\u001b[39;00m\n\u001b[32m     16\u001b[39m plt.figure(figsize=(\u001b[32m15\u001b[39m, \u001b[32m10\u001b[39m))\n",
       "\u001b[31mValueError\u001b[39m: 'content/women fashion/dark, elegant, sleeveless dress that reaches down to about mid-calf.jpg' is not in list"
      ]
@@ -382,31 +392,13 @@
    ],
    "source": [
     "input_image_path = 'content/women fashion/dark, elegant, sleeveless dress that reaches down to about mid-calf.jpg'\n",
-    "recommend_fashion_items_cnn(input_image_path, all_features, data_files_paths, model, top_n=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "bb8b8e6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['anarkali suit with a long, olive green kurta adorned with intricate embroidery around the neckline and cuffs, paired with matching fitted trousers.jpg', 'Anarkali suit with a modern twist.jpg', 'Anarkali suit with fitted bodice with a high neckline.jpg', 'anarkali suit with intricate silver embellishments on the neckline, sleeves.jpg', 'anarkali suit with lavender in color with intricate white patterns throughout the fabric.jpg', 'anarkali suit. It consists of a turquoise skirt with detailed golden embroidery, a multicolored blouse with floral patterns, and an orange dupatta with lace borders.jpg', 'ark green, knee-length dress with short sleeves and a white, patterned neckline.jpg', 'beige top adorned with black dots and a green skirt.jpg', 'black and white gingham checkered A-line dress with a flared skirt.jpg', 'black double-breasted blazer with gold buttons, paired with a mid-length skirt.jpg', 'black dress with lace detailing.jpg', 'black dress with sparkling details.jpg', 'black floral saree.jpg', 'black jumpsuit with a diagonal stripe of glittering material running across the body.jpg', 'black lace bustier top paired with high-waisted black trousers.jpg', 'black off-shoulder dress with belt.jpg', 'black top with spaghetti straps and a black skirt adorned with a fringe detail at the hem.jpg', 'black top, white trousers.jpg', 'black, sequined dress with thin shoulder straps.jpg', 'blue dress with a floral pattern.jpg', 'bright red kurta with an intricate patterned design.jpg', 'bright red, form-fitting, strapless dress with a high slit on one side revealing part of the leg.jpg', 'bright red, sequined dress with thin shoulder straps.jpg', 'burgundy off-the-shoulder dress with an asymmetrical hemline.jpg', 'burnt orange long-sleeve top, a plaid skirt with brown tones, and a matching burnt orange beret.jpeg', 'chic and elegant outfit consisting of a pair of high-waisted wide-leg trousers paired with a long-sleeve sheer lace top.jpg', 'classic black slip dress with a midi length.jpg', 'colorful saree.jpg', 'cream-colored, long, open-front coat with wide lapels.jpg', 'dark blue, knee-length dress with thin straps.jpg', 'dark, elegant, sleeveless dress that reaches down to about mid-calf.jpg', 'deep burgundy, silky dress with long sleeves and a wrap-style front.jpg', 'dress with a classic black and white houndstooth pattern.jpg', 'fitted black dress that reaches down to mid-calf.jpg', 'fitted dress with a classic black and white houndstooth pattern.webp', 'fitted, cream-colored dress with long sheer sleeves.jpg', 'fitted, off-the-shoulder white dress with horizontal ribbed texture.jpg', 'fitted, ruched dress with a sweetheart neckline and long mesh sleeves.jpg', 'fitted, short, yellow dress with short sleeves.jpeg', 'floral dress with long sleeves.jpeg', 'flowing green off-shoulder dress.jpg', 'fluffy, possibly faux fur or eyelash knit sweater with a cropped cut top.jpg', 'form-fitting dress with a vibrant pattern of yellow, blue, and black.jpg', 'glamorous two-piece outfit featuring a sequined design.jpeg', 'green dress with a floral pattern, paired with matching green trousers.jpg', 'high-waisted white trousers paired with a structured, corset-style bodice featuring mesh.jpg', 'l-htdrss7133-honky-tonky-original-imagszfhfghhs2rp.jpeg', 'ladies-party-wear-cotton-short-dress-full.jpg', 'Latest-Party-Wear-One-Piece-Gown-For-Women.webp', 'light blue, sequined dress with a V-neckline, long sleeves.jpg', 'light brown sleeveless double-breasted blazer paired with matching straight-leg trousers.jpg', 'light green, short dress with lace detailing around the waist and the edges of the sleeves and hem.jpg', 'light peach, knee-length dress with off-the-shoulder sleeves.webp', 'long, elegant blue dress with an off-the-shoulder design with sheer sleeves.jpg', 'long, elegant, teal dress with a high slit on one side.jpg', 'long, flowing dress with a full skirt.jpg', 'long, flowing, pink dress with a sparkly texture.jpg', 'long, intricately designed dress with full sleeves.jpg', 'metallic-looking jacket with intricate designs and fringes hanging from the sleeves.jpg', 'mustard yellow fitted dress with white off-the-shoulder sleeves.webp', 'off-the-shoulder black ball gown.jpg', 'one-shoulder, black, sequined dress with fringe detailing at the hem.jpg', 'one-shoulder, fitted dress that features sequin embellishments and sheer panels.jpg', 'pink, knee-length dress that sparkles.jpg', 'red dress adorned with an intricate white pattern.jpg', 'red dress with a pattern of small white flowers.jpg', 'red velvet sheath midi dress.jpg', 'royal blue off-shoulder dress.jpg', 'salwar kameez in a vibrant red color with detailed embroidery.jpg', 'shiny purple sequined dress with a one-shoulder design.jpg', 'shiny, silver, wrap-style dress with long sleeves.jpg', 'short, blue floral dress with long puffed sleeves.jpg', 'short, white, sleeveless dress with thin straps.jpg', 'sleeveless dress adorned with pink sequins.jpg', 'sleeveless dress with a high neckline.jpeg', 'Sleeveless-Ruched-Tight-Fashion-Sexy-Bodycon-Party-Women-Club-Dresses.webp', 'solid dark blue top and a floral pattern on the bottom.jpg', 'sophisticated black dress with an asymmetrical design with one sleeve and a strapless neckline on the opposite side.jpg', 'sparkling black dress.jpg', 'sparkling blue dress.jpeg', 'sparkling white dress with long sleeves.jpg', 'sparkling, fitted dress 2.jpeg', 'sparkling, fitted dress with long sleeves.jpg', 'sparkling, fitted dress.jpeg', 'sparkling, sequined dress.jpg', 'strapless red midi dress with a mermaid silhouette.jpg', 'strapless, sequined dress that sparkles with multiple colors.jpg', 'tight-fitting, off-the-shoulder white dress 2.jpg', 'tight-fitting, off-the-shoulder white dress.webp', 'vibrant blue and a neutral tone adorned with colorful floral patterns.jpg', 'well-fitted beige suit.jpg', 'white dress adorned with colorful floral patterns.jpg', 'white knee-length dress with a fitted design and long sleeves.webp', 'white, intricately detailed top and a flowing dark blue skirt.jpg', 'Women-off-the-shoulder-sexy-embroidery-fashion-party-dress-1.png', 'yellow, intricately designed Anarkali suit.jpeg']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data_files_paths)"
+    "recommend_fashion_items_cnn(input_image_path, all_features, data_files_paths, model, top_n=4)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121f6c54",
+   "id": "51e00b73",
    "metadata": {},
    "outputs": [],
    "source": []
